# pull_test

./: CMakeLists.txt  Configuration.h  README.md  package.xml
include/pull_test/: basic_contact_specs.hpp  contact_spec.hpp  pull_force_estimator.hpp  pull_test_interface.hpp
include/pull_test/magneto/: magneto_contact_container.hpp  magneto_definition.hpp
include/pull_test/my_geometry/polytope/: polytope.h
include/pull_test/my_robot_system/: robot_system.hpp
include/pull_test/my_utils/io/: io_utilities.hpp
include/pull_test/my_utils/math/: math_utilities.hpp
robot_description/: Magneto.urdf
robot_description/meshes/: base_link.stl  coxa_link.stl  femur_link.stl  foot_link.stl  tibia_link.stl
src/: basic_contact_specs.cpp  pull_force_estimator.cpp  pull_test_interface.cpp
src/magneto/: magneto_contact_container.cpp  main.cpp
src/my_geometry/polytope/: polytope.cpp
src/my_utils/io/: comm_udp.cpp  io_utilities.cpp
src/my_utils/math/: math_utilities.cpp  pseudo_inverse.cpp
src/robot_system/: robot_system.cpp
